--- a/netflix.html
+++ b/netflix.html
@@ -32,6 +32,14 @@
         <h2>Films les mieux notés</h2>
         <div class="movie-list">
             <!-- Les vignettes des séries populaires vont ici -->
+            <img src="films/film1.jpg" alt="film1">
+            <img src="films/film2.jpg" alt="film2">
+            <img src="films/film3.jpg" alt="film3">
+            <img src="films/film4.jpg" alt="film4">
+            <img src="films/film5.jpg" alt="film5">
+            <img src="films/film6.jpg" alt="film6">
+            <img src="films/film7.jpg" alt="film7">
+            <img src="films/film8.jpg" alt="film8">
         </div>
         <h2>Catégorie 1</h2>
         <div class="movie-list">
