--- a/web.html
+++ b/web.html
@@ -1,40 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liste de Films</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            // Fonction pour récupérer l'année de chaque film et l'afficher
-            function displayMovieYears() {
-                $.ajax({
-                    url: 'http://localhost:8000/api/v1/titles/',
-                    method: 'GET',
-                    success: function (data) {
-                        const movies = data.results;
-
-                        // Effacez le contenu précédent
-                        $('#movie-years').empty();
-
-                        // Afficher les années des films
-                        movies.forEach(function (movie) {
-                            const movieYear = `
-                                <div class="movie-year">
-                                    <p>Année de "${movie.title}": ${movie.year}</p>
-                                </div>`;
-                            $('#movie-years').append(movieYear);
-                        });
-                    },
-                    error: function () {
-                        console.error('Erreur lors de la requête Ajax');
-                    }
-                });
-            }
-
-            // Appel de la fonction pour afficher les années au chargement de la page
-            displayMovieYears();
-        });
-    </script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <h1>Années des Films</h1>
