--- a/netflix.html
+++ b/netflix.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="test.js" defer></script>
     <title>JustStreamIt</title>
 </head>
 <body>
@@ -30,16 +32,10 @@
     
     <div class="movies">
         <h2>Films les mieux notés</h2>
-        <div class="movie-list">
+        <div class="movie-list" id="movie-list">
             <!-- Les vignettes des séries populaires vont ici -->
             <img src="films/film1.jpg" alt="film1">
-            <img src="films/film2.jpg" alt="film2">
-            <img src="films/film3.jpg" alt="film3">
-            <img src="films/film4.jpg" alt="film4">
-            <img src="films/film5.jpg" alt="film5">
-            <img src="films/film6.jpg" alt="film6">
-            <img src="films/film7.jpg" alt="film7">
-            <img src="films/film8.jpg" alt="film8">
+         
         </div>
         <h2>Catégorie 1</h2>
         <div class="movie-list">
