--- a/netflix.html
+++ b/netflix.html
@@ -33,23 +33,9 @@
     <div class="movies">
         <h2>Films les mieux notés</h2>
         <div class="movie-list" id="movie-list">
-            <!-- Les vignettes des séries populaires vont ici -->
-            <img src="films/film1.jpg" alt="film1">
-         
+           <!-- javascript sur categorie id movie-list -->
         </div>
-        <h2>Catégorie 1</h2>
-        <div class="movie-list">
-            <!-- Les vignettes des films populaires vont ici -->
-        </div>
-        <h2>Catégorie 2</h2>
-        <div class="movie-list">
-            <!-- Les vignettes des films populaires vont ici -->
-        </div>
-        <h2>Catégorie 3</h2>
-        <div class="movie-list">
-            <!-- Les vignettes des films populaires vont ici -->
-        </div>
-    </div>
+
     
     <footer>
         <p>&copy; 2023 JustStreamIt </p>
