--- a/carrousel.html
+++ b/carrousel.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carrousel Simple</title>
+  <title>Carrousel de Films</title>
   <link rel="stylesheet" href="carrousel.css">
 </head>
 <body>
 
+<div id="movie-years"></div>
+
 <div id="carousel-container">
   <div id="carousel">
-    <div class="carousel-item"><img src="films/film1.jpg" alt="Image 1"></div>
-    <div class="carousel-item"><img src="films/film2.jpg" alt="Image 2"></div>
-    <div class="carousel-item"><img src="films/film3.jpg" alt="Image 3"></div>
-    <div class="carousel-item"><img src="films/film4.jpg" alt="Image 4"></div>
-    <div class="carousel-item"><img src="films/film5.jpg" alt="Image 5"></div>
-    <div class="carousel-item"><img src="films/film6.jpg" alt="Image 6"></div>
-    <div class="carousel-item"><img src="films/film7.jpg" alt="Image 7"></div>
+    <!-- Les éléments du carrousel seront ajoutés dynamiquement -->
   </div>
 </div>
 
 <button onclick="prevSlide()">Précédent</button>
 <button onclick="nextSlide()">Suivant</button>
 
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="carrousel.js"></script>
 
 </body>
