--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
                     <!-- Les éléments du carrousel seront ajoutés dynamiquement -->
                 </div>
             </div>
+            <div id="carousel-container-2">
+
+
+                <div id="carousel-2">
+                    <!-- Les éléments du carrousel seront ajoutés dynamiquement -->
+                </div>
+            </div>
+
 
             <button onclick="nextSlide()">
                 <img src="fleche_droite.png" alt="fleche_droite">
