--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <div class="content_fleche">
 
-            <button onclick="prevSlide()">
+            <button onclick="prevSlide(1)">
                 <img src="fleche_gauche.png" alt="fleche gauche">
             </button>
             <div id="carousel-container1">
@@ -49,7 +49,7 @@
                 </div>
             </div>
 
-            <button onclick="nextSlide()">
+            <button onclick="nextSlide(1)">
                 <img src="fleche_droite.png" alt="fleche_droite">
             </button>
             <!-- javascript sur categorie id movie-list -->
@@ -61,7 +61,7 @@
 
         <div class="content_fleche">
 
-            <button onclick="prevSlide()">
+            <button onclick="prevSlide(2)">
                 <img src="fleche_gauche.png" alt="fleche gauche">
             </button>
             <div id="carousel-container2">
@@ -72,7 +72,7 @@
                 </div>
             </div>
 
-            <button onclick="nextSlide()">
+            <button onclick="nextSlide(2)">
                 <img src="fleche_droite.png" alt="fleche_droite">
             </button>
             <!-- javascript sur categorie id movie-list -->
