--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 
     <section id="2">
-        <h2>Films plus recents</h2>
+        <h2>Meilleurs Films Drama</h2>
         <!-- Section 2 -->
         <div class="bouton-container" >
             <button id="prevButton2">
@@ -82,16 +82,55 @@
     </section>
 
 
+ <section id="3">
+    <h2>Meilleurs Films Fantasy</h2>
+    <!-- Section 3 -->
+    <div class="bouton-container" >
+        <button id="prevButton3">
+            <img src="fleche_gauche.png" alt="fleche gauche">
+        </button>
+    <div id="carousel-container3">
+        <div class="carousel"></div>
+    </div>
+    <button id="nextButton3">
+        <img src="fleche_droite.png" alt="fleche_droite">
+    </button>
+</div>
+
+    <div id="myModal3" class="modal">
+        <div id="modalContent3" class="modal-content">
+            <!-- Contenu de la fenêtre modale -->
+        </div>
+    </div>
+</section>
+
+<section id="4">
+    <h2>Meilleurs Films D'horreur</h2>
+    <!-- Section 3 -->
+    <div class="bouton-container" >
+        <button id="prevButton4">
+            <img src="fleche_gauche.png" alt="fleche gauche">
+        </button>
+    <div id="carousel-container4">
+        <div class="carousel"></div>
+    </div>
+    <button id="nextButton4">
+        <img src="fleche_droite.png" alt="fleche_droite">
+    </button>
+</div>
+
+    <div id="myModal4" class="modal">
+        <div id="modalContent4" class="modal-content">
+            <!-- Contenu de la fenêtre modale -->
+        </div>
+    </div>
+</section>
 
 
 
 
 
-
-
-
-    <!-- javascript sur categorie id movie-list -->
-
+ 
 
     <div id="myModal" class="modal">
         <div id="modalContent" class="modal-content">
