--- a/index.html
+++ b/index.html
@@ -24,11 +24,16 @@
         </nav>
     </header>
 
-    <section class="affiche">
-        <img src="films/film1.jpg" alt="film à l'affiche">
+    <section class="affiche" id="afficheSection">
         <div class="content">
             <h2>Titre du film</h2>
             <button class="play-button">PLAY</button>
+        </div>
+        
+        <div id="myModalaffiche" class="modal">
+            <div id="modalContentAffiche" class="modal-content">
+                <!-- Contenu de la fenêtre modale -->
+            </div>
         </div>
     </section>
 
