checker css html

--- a/index.html
+++ b/index.html
@@ -29,92 +29,68 @@
             <h2>Titre du film</h2>
             <button class="play-button">PLAY</button>
         </div>
-   
+
     </section>
-   
-   
-
-
-
-
 
     <section id="1">
         <h2>Films les mieux notés</h2>
-        <!-- Section 1 -->
-        <div class="bouton-container" >
+        <div class="bouton-container">
             <button id="prevButton1">
                 <img src="fleche_gauche.png" alt="fleche gauche">
             </button>
-        <div id="carousel-container1">
-            <div class="carousel"></div>
+            <div id="carousel-container1" class="carousel_contain">
+                <div class="carousel"></div>
+            </div>
+            <button id="nextButton1">
+                <img src="fleche_droite.png" alt="fleche_droite">
+            </button>
         </div>
-        <button id="nextButton1">
-            <img src="fleche_droite.png" alt="fleche_droite">
-        </button>
-    </div>
-
-  
     </section>
-
 
     <section id="2">
         <h2>Meilleurs Films Drama</h2>
-        <!-- Section 2 -->
-        <div class="bouton-container" >
+        <div class="bouton-container">
             <button id="prevButton2">
                 <img src="fleche_gauche.png" alt="fleche gauche">
             </button>
-        <div id="carousel-container2">
-            <div class="carousel"></div>
+            <div id="carousel-container2" class="carousel_contain">
+                <div class="carousel"></div>
+            </div>
+            <button id="nextButton2">
+                <img src="fleche_droite.png" alt="fleche_droite">
+            </button>
         </div>
-        <button id="nextButton2">
-            <img src="fleche_droite.png" alt="fleche_droite">
-        </button>
-    </div>
-
- 
     </section>
 
+    <section id="3">
+        <h2>Meilleurs Films Fantasy</h2>
+        <div class="bouton-container">
+            <button id="prevButton3">
+                <img src="fleche_gauche.png" alt="fleche gauche">
+            </button>
+            <div id="carousel-container3" class="carousel_contain">
+                <div class="carousel"></div>
+            </div>
+            <button id="nextButton3">
+                <img src="fleche_droite.png" alt="fleche_droite">
+            </button>
+        </div>
+    </section>
 
- <section id="3">
-    <h2>Meilleurs Films Fantasy</h2>
-    <!-- Section 3 -->
-    <div class="bouton-container" >
-        <button id="prevButton3">
-            <img src="fleche_gauche.png" alt="fleche gauche">
-        </button>
-    <div id="carousel-container3">
-        <div class="carousel"></div>
-    </div>
-    <button id="nextButton3">
-        <img src="fleche_droite.png" alt="fleche_droite">
-    </button>
-</div>
-
- 
-</section>
-
-<section id="4">
-    <h2>Meilleurs Films D'horreur</h2>
-    <!-- Section 3 -->
-    <div class="bouton-container" >
-        <button id="prevButton4">
-            <img src="fleche_gauche.png" alt="fleche gauche">
-        </button>
-    <div id="carousel-container4">
-        <div class="carousel"></div>
-    </div>
-    <button id="nextButton4">
-        <img src="fleche_droite.png" alt="fleche_droite">
-    </button>
-</div>
-
-</section>
-
-
-
-
-
+    <section id="4">
+        <h2>Meilleurs Films D'horreur</h2>
+        <div class="bouton-container">
+            <button id="prevButton4">
+                <img src="fleche_gauche.png" alt="fleche gauche">
+            </button>
+            <div id="carousel-container4" class="carousel_contain">
+                <div class="carousel"></div>
+            </div>
+            <button id="nextButton4">
+                <img src="fleche_droite.png" alt="fleche_droite">
+            </button>
+        </div>
+    </section>
 
     <footer>
         <p>&copy; 2023 JustStreamIt </p>
